--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = skit
-version = 0.0.4
+version = 0.0.5
 description = A set of scripts that help with submitting jobs on slurm.
 
 [options]
@@ -10,3 +10,4 @@ packages = find:
 console_scripts = 
     skit = skit.scripts.skit:main
     ssub = skit.scripts.ssub:main
+    herby = skit.scripts.herby:main
