add dependency, fix arg

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ description = A set of scripts that help with submitting jobs on slurm.
 
 [options]
 packages = find:
+install_requires = 
+    numpy
 
 [options.entry_points]
 console_scripts = 
